apps/tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools
  labels:
    app: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tools
  template:
    metadata:
      labels:
        app: tools
    spec:
      containers:
      - name: tools
        image: iib0011/omni-tools@sha256:9658e0442a35563d047333d9dbc33804bedc2716fab8bcdf4f41fa9701b573be
        ports:
        - containerPort: 80
