apps/tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tools-service
  labels:
    app: tools
spec:
  selector:
    app: tools
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
