apps/tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tools-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    hajimari.io/appName: Tools
    hajimari.io/icon: mdi:tools
spec:
  rules:
    - host: &host tools.kleinsorge.dev
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: tools-service
                port:
                  number: 80
  tls:
    - secretName: tools-tls-certificate
      hosts:
        - *host
